--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -45,8 +45,10 @@ $colors: (
   primary:     rgb(6,92,121),
   secondary:  #32db64,
   danger:     #f53d3d,
+  orange:     #ff4500,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  white:     #FFFFFF,
 );
 
 
