--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -15,10 +15,10 @@ $app-direction: ltr;
 @import "ionic.globals";
 
 
-$card-md-margin-bottom:3px;
-$card-md-margin-left:2px;
-$card-md-margin-right:2px;
-$card-md-margin-top:3px;
+//$card-md-margin-bottom:3px;
+//$card-md-margin-left:8px;
+//$card-md-margin-right:8px;
+//$card-md-margin-top:3px;
 
 // Shared Variables
 // --------------------------------------------------
