--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -41,3 +41,22 @@
 .label-md {
     margin: 5px 8px 5px 0;
 }
+ion-modal.inset-modal {
+  // transparent black background overlay
+  background-color: rgba(0, 0, 0, .5) !important;
+  transition: opacity .25s ease-in-out;
+  padding: 20vh 10vw;
+}
+
+ion-footer button {
+  margin: 0 !important;
+}
+
+.empty {
+  text-align: center;
+  margin-top: -20%;
+  padding-left: 10%;
+  padding-right: 10%; 
+   font-size: 1.2em;
+  color:map-get($colors, light);  
+}  
