--- a/src/pages/commendes-view/commendes-view.scss
+++ b/src/pages/commendes-view/commendes-view.scss
@@ -17,5 +17,8 @@ page-commendes-view {
         .item-md {
             padding-left: 0px;}
     }
-
+    .spiner{
+        height: 100px;
+        width: 100%;
+      }
 }
