--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,3 +1,20 @@
 page-profile {
-
+    ion-item {
+        border-radius: 12px !important;
+        padding-left: 10px !important;
+        margin-bottom: 15px !important;
+        margin-bottom: 10px;
+       // color: #fff !important;
+        background-color: rgba(255, 255, 255, .2) !important;
+        font-size: 1.9em;
+      }
+    
+    
+       ::-webkit-input-placeholder {
+      //  color: white !important;
+      }
+      .item-inner {
+        border-bottom: 0 !important;
+        box-shadow: 1  !important;
+      }
 }
