--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -14,7 +14,17 @@ $app-direction: ltr;
 
 @import "ionic.globals";
 
-
+$toolbar-background: #488aff;
+/*$searchbar-md-input-background-color:$toolbar-background;
+$searchbar-md-input-border-radius:25px;
+$searchbar-md-input-text-color:#fff;
+$searchbar-md-input-clear-icon-color:#141414;*/
+$searchbar-md-input-border-radius:25px;
+$searchbar-md-padding-top:1px;
+$searchbar-md-input-height:38px;
+$searchbar-md-input-box-shadow:0 1px 2px 0 rgba(0, 0, 0, .14);
+$toolbar-md-height:75px;
+$split-pane-side-max-width:18%;
 //$card-md-margin-bottom:3px;
 //$card-md-margin-left:8px;
 //$card-md-margin-right:8px;
@@ -39,7 +49,7 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:     rgb(6,92,121),
+  primary:     #488aff,
   secondary:  #32db64,
   danger:     #f53d3d,
   orange:     #ff4500,
