--- a/src/pages/cartograph/cartograph.scss
+++ b/src/pages/cartograph/cartograph.scss
@@ -1,10 +1,9 @@
 page-cartograph {
     .scroll-content {
         height: 100%;
-        margin-top: $toolbar-md-height ;
       }
 
-      #map {
+      #mapview {
         width: 100%;
         height:100%;
       }
